# git-remote-rclone

./: LICENSE  README.md  compute_sha.py  git-remote-rclone  setup.cfg  setup.py  test.bash
.github/workflows/: pythonpackage.yml
