[metadata]
url = https://github.com/redstreet/git-remote-rclone-reds
version = 0.2
author = Red S
author_email =  redstreet@users.noreply.github.com
maintainer = Red S
maintainer_email =  redstreet@users.noreply.github.com
description = Git remote helper for rclone-supported services
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = GPL-3.0
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.5
scripts =
  git-remote-rclone
